📦 build(frontend): add markdown and highlighting dependencies
- add react-markdown, rehype-highlight, rehype-raw, and remark-gfm to dependencies
- update package-lock.json with new dependencies

✨ feat(chat): implement markdown rendering for messages

- create MarkdownRenderer component for handling markdown content
- add MarkdownRenderer to MessageItem for agent messages
- support bold, lists, and paragraphs in markdown

💄 style(chat): enhance chat message styles

- add styles for markdown elements in MarkdownRendererStyle
- adjust padding in MessagesContainer
- update MessageText to support markdown container

📦 build(frontend): include highlight.js styling

- import GitHub dark style from highlight.js in GlobalStyles

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.36",
+    "highlight.js": "^11.11.1",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0",
+    "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
