--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -1,12 +1,8 @@
-version: '3.8'
-
-# frontend service
-
-# backend service
+name: zypher_stack
 
 services:
   ollama:
-    image: ollama/ollama:latest
+    image: ollama/ollama:0.13.0
     container_name: ollama
     ports:
       - "11434:11434"
@@ -16,6 +12,24 @@ services:
       - OLLAMA_HOST=0.0.0.0:11434
     restart: unless-stopped
 
+  postgres:
+    image: postgres:15
+    container_name: postgres
+    env_file:
+      - .env
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - "5432:5432"
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+    restart: unless-stopped
+
 volumes:
   ollama_data:
+    driver: local
+    
+  pg_data:
     driver: local
