📝 docs(README): update architecture and quick start instructions
- add PostgreSQL database integration
- update frontend port and infrastructure instructions
- streamline data flow and features section

🗃️ chore(env): update environment variables for database connection

- remove unused API keys
- add PostgreSQL connection details

✨ feat(database): add PostgreSQL connection and schema

- create database connection pool
- define database schema and integration in ZypherProvider
- implement database query execution and response handling

📦 build(docker): update docker-compose for database initialization

- mount SQL file for initial database setup
- ensure PostgreSQL starts with fake company data

🗃️ chore(lock): update deno.lock for new dependencies

- add PostgreSQL and related modules to dependency lock file

🗃️ chore(data): add SQL file for fake company data

- create SQL tables with sample data for budgets, debts, customers, products, employees, and sales

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,3 @@
-# Coloque sua chave da API Anthropic aqui
-ANTHROPIC_API_KEY=sua_chave_aqui
-
-# Opcional: se quiser usar o Firecrawl MCP
-# FIRECRAWL_API_KEY=sua_chave_aqui
+POSTGRES_USER=zypher_user
+POSTGRES_PASSWORD=zypher_secret
+POSTGRES_DB=zypher_db
