--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -10,6 +10,11 @@ services:
       - ollama_data:/root/.ollama
     environment:
       - OLLAMA_HOST=0.0.0.0:11434
+    deploy:
+      resources:
+        limits:
+          memory: 2g
+          cpus: '1.0'
     restart: unless-stopped
 
   postgres:
