--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,5 @@
 POSTGRES_USER=zypher_user
 POSTGRES_PASSWORD=zypher_password
 POSTGRES_DB=zypher_db
+
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
