📦 build(ci): add GitHub Actions workflow for Docker image management
- create `build-and-push-images.yml` for automated Docker image build and push
- configure workflow triggers for main branch and version tags
- include steps for QEMU, Docker Buildx setup, and Docker Hub login

🐳 chore(docker): add Dockerfiles for backend and frontend services

- create `backend/Dockerfile` with Deno setup and server permissions
- create `frontend/Dockerfile` with Node.js build stage and Nginx production image

🔧 fix(docker-compose): update service configurations and volume mounts

- change stack name to `zypher_agent` in `docker-compose.yml`
- add backend and frontend services with build configurations
- adjust volume mounts and environment file paths for consistency

--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -1,11 +1,11 @@
-name: zypher_stack
+name: zypher_agent
 
 services:
   postgres:
     image: postgres:15
     container_name: postgres
     env_file:
-      - .env
+      - ../backend/.env
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -13,9 +13,34 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./fake_company.sql:/docker-entrypoint-initdb.d/fake_company.sql
+      - pg_data:/var/lib/postgresql/data
+      - ./fake_company.sql:/docker-entrypoint-initdb.d/fake_company.sql:ro
     restart: unless-stopped
 
-volumes:    
+  backend:
+    image: ${BACKEND_IMAGE:-analiceleite/zypher_agent-backend:beta}
+    build:
+      context: ..
+      dockerfile: backend/Dockerfile
+    env_file:
+      - ../backend/.env
+    depends_on:
+      - postgres
+    ports:
+      - "8000:8000"
+    restart: unless-stopped
+
+  frontend:
+    image: ${FRONTEND_IMAGE:-analiceleite/zypher_agent-frontend:beta}
+    build:
+      context: ..
+      dockerfile: frontend/Dockerfile
+    ports:
+      - "3000:80"
+    depends_on:
+      - backend
+    restart: unless-stopped
+
+volumes:
   pg_data:
     driver: local
