--- a/.github/workflows/build-and-push-images.yml
+++ b/.github/workflows/build-and-push-images.yml
@@ -37,6 +37,7 @@ jobs:
             echo "IMAGE_PREFIX=${{ github.repository_owner }}" >> $GITHUB_ENV
           fi
           echo "SHORT_SHA=$(echo ${GITHUB_SHA} | cut -c1-7)" >> $GITHUB_ENV
+          echo "GHCR_PREFIX=ghcr.io/${{ github.repository_owner }}" >> $GITHUB_ENV
 
       - name: Log in to Docker Hub
         if: ${{ env.IMAGE_PREFIX != github.repository_owner }}
@@ -44,6 +45,13 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Log in to GitHub Container Registry (GHCR)
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push image
         uses: docker/build-push-action@v4
@@ -56,6 +64,9 @@ jobs:
             ${{ env.IMAGE_PREFIX }}/zypher_agent-${{ matrix.service }}:beta
             ${{ env.IMAGE_PREFIX }}/zypher_agent-${{ matrix.service }}:${{ env.SHORT_SHA }}
             ${{ env.IMAGE_PREFIX }}/zypher_agent-${{ matrix.service }}:latest
+            ${{ env.GHCR_PREFIX }}/zypher_agent-${{ matrix.service }}:beta
+            ${{ env.GHCR_PREFIX }}/zypher_agent-${{ matrix.service }}:${{ env.SHORT_SHA }}
+            ${{ env.GHCR_PREFIX }}/zypher_agent-${{ matrix.service }}:latest
 
       - name: Image digest
         run: echo "Built ${{ env.IMAGE_PREFIX }}/zypher_agent-${{ matrix.service }}"
