--- a/.github/workflows/build-and-push-images.yml
+++ b/.github/workflows/build-and-push-images.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Images
+name: Build and Push GHCR Images
 
 permissions:
   contents: read
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-push:
+  build-and-push-ghcr:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -33,33 +33,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Configure image variables
+      - name: Set env and short SHA
         run: |
-          if [ -n "${{ secrets.DOCKERHUB_USERNAME }}" ]; then
-            echo "IMAGE_PREFIX=${{ secrets.DOCKERHUB_USERNAME }}" >> $GITHUB_ENV
-          else
-            echo "IMAGE_PREFIX=${{ github.repository_owner }}" >> $GITHUB_ENV
-          fi
           echo "SHORT_SHA=$(echo ${GITHUB_SHA} | cut -c1-7)" >> $GITHUB_ENV
           echo "GHCR_PREFIX=ghcr.io/${{ github.repository_owner }}" >> $GITHUB_ENV
 
-      - name: Log in to Docker Hub
-        if: ${{ env.IMAGE_PREFIX != github.repository_owner }}
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Log in to GitHub Container Registry (GHCR) using GHCR_TOKEN
-        if: ${{ secrets.GHCR_TOKEN }}
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_TOKEN }}
-
-      - name: Log in to GitHub Container Registry (GHCR) using GITHUB_TOKEN
-        if: ${{ !secrets.GHCR_TOKEN }}
+      - name: Login to GHCR
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -77,19 +56,6 @@ jobs:
             ${{ env.GHCR_PREFIX }}/zypher_agent-${{ matrix.service }}:beta
             ${{ env.GHCR_PREFIX }}/zypher_agent-${{ matrix.service }}:${{ env.SHORT_SHA }}
             ${{ env.GHCR_PREFIX }}/zypher_agent-${{ matrix.service }}:latest
-
-      - name: Build and push to Docker Hub
-        if: ${{ env.IMAGE_PREFIX != github.repository_owner }}
-        uses: docker/build-push-action@v4
-        with:
-          context: ${{ matrix.context }}
-          file: ${{ matrix.dockerfile }}
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: |
-            ${{ env.IMAGE_PREFIX }}/zypher_agent-${{ matrix.service }}:beta
-            ${{ env.IMAGE_PREFIX }}/zypher_agent-${{ matrix.service }}:${{ env.SHORT_SHA }}
-            ${{ env.IMAGE_PREFIX }}/zypher_agent-${{ matrix.service }}:latest
 
       - name: Image digest
         run: echo "Built ${{ env.IMAGE_PREFIX }}/zypher_agent-${{ matrix.service }}"
