🔧 chore(workflows): remove GitHub Actions workflow for building and pushing images
- delete build-and-push-images.yml file from the GitHub workflows directory

🔧 chore(env): update example environment variables for backend

- change POSTGRES_PASSWORD to zypher_secret for better security
- add POSTGRES_HOST and POSTGRES_PORT variables for database configuration

💄 style(Dockerfile): improve file copying and permissions

- update COPY instruction syntax for better readability
- add sys permission in CMD to allow system-level operations

♻️ refactor(database): enhance database connection configuration

- use environment variables for hostname and port in database connection
- add default values for hostname and port if environment variables are not set

🔧 chore(docker-compose): update service configurations and image references

- change docker-compose name from zypher_agent to zypher_stack
- update container names and image references for backend and frontend services
- remove build contexts and Dockerfiles from backend and frontend services
- adjust env_file paths for better configuration management

--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -1,11 +1,11 @@
-name: zypher_agent
+name: zypher_stack
 
 services:
   postgres:
     image: postgres:15
-    container_name: postgres
+    container_name: zypher_database
     env_file:
-      - ../backend/.env
+      - .env
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -18,23 +18,19 @@ services:
     restart: unless-stopped
 
   backend:
-    image: ${BACKEND_IMAGE:-analiceleite/zypher_agent-backend:beta}
-    build:
-      context: ..
-      dockerfile: backend/Dockerfile
-    env_file:
-      - ../backend/.env
+    image: ghcr.io/analiceleite/zypher_backend:v1.0.0
+    container_name: zypher_backend
     depends_on:
       - postgres
+    env_file:
+      - .env
     ports:
       - "8000:8000"
     restart: unless-stopped
 
   frontend:
-    image: ${FRONTEND_IMAGE:-analiceleite/zypher_agent-frontend:beta}
-    build:
-      context: ..
-      dockerfile: frontend/Dockerfile
+    image: ghcr.io/analiceleite/zyper_frontend:v1.0.0
+    container_name: zypher_frontend
     ports:
       - "3000:80"
     depends_on:
