--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,7 @@
 POSTGRES_USER=zypher_user
-POSTGRES_PASSWORD=zypher_password
+POSTGRES_PASSWORD=zypher_secret
 POSTGRES_DB=zypher_db
+POSTGRES_HOST=zypher_database
+POSTGRES_PORT=5432
 
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
