📝 docs(README): update and enhance deployment instructions
- clarify prerequisites and steps for running in containers
- add sections for local development and suggested improvements
- update ports and service descriptions

🔧 chore(env): remove redundant environment variable usage

- hardcode port and model settings in env.ts
- simplify configuration management

📦 build(docker): streamline Docker Compose setup

- replace fake_company.sql with init.sql for database initialization
- correct frontend image name in docker-compose.yml
- add zypher_agent_container.zip for easier deployment

--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -10,11 +10,9 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
-    ports:
-      - "5432:5432"
     volumes:
       - pg_data:/var/lib/postgresql/data
-      - ./fake_company.sql:/docker-entrypoint-initdb.d/fake_company.sql:ro
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     restart: unless-stopped
 
   backend:
@@ -29,7 +27,7 @@ services:
     restart: unless-stopped
 
   frontend:
-    image: ghcr.io/analiceleite/zyper_frontend:v1.0.0
+    image: ghcr.io/analiceleite/zypher_frontend:v1.0.0
     container_name: zypher_frontend
     ports:
       - "3000:80"
