📝 docs(README): update setup instructions and add FAQ section
- add example questions section for users to interact with the agent
- update suggested improvements to reflect current priorities

🐛 fix(env): update environment variable handling in backend config

- modify backend to use environment variable for port configuration

💄 style(History): improve UI labels and input handling

- change modal title to "Edit conversation title" for clarity
- remove answer editing input for streamlined UI

♻️ refactor(Modal): remove unused refs and effects

- clean up modal component by removing unnecessary refs and effects

🔧 chore(env): update example environment variables and add comments

- add comments to .env.example for better guidance
- update default postgres password and add anthropic api key placeholder

✨ feat(docker): expose postgres port for local development

- uncomment ports section in docker-compose for local postgres access

📦 build(zip): update zypher agent container zip file

- update binary zip file to reflect latest changes and improvements

--- a/infrastructure/.env.example
+++ b/infrastructure/.env.example
@@ -1,3 +1,9 @@
+# Example environment variables for Zypher application
 POSTGRES_USER=zypher_user
-POSTGRES_PASSWORD=zypher_password
+POSTGRES_PASSWORD=zypher_secret
 POSTGRES_DB=zypher_db
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+
+# DO NOT CHANGE THE VALUES BELOW UNLESS YOU KNOW WHAT YOU ARE DOING
+POSTGRES_HOST=zypher_database
+POSTGRES_PORT=5432
