--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -10,6 +10,9 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
+    # LOCAL DEVELOPMENT ONLY: Uncomment the ports section to expose Postgres to the host machine
+    ports:
+    - "5432:5432"
     volumes:
       - pg_data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
