✨ feat(backend): add config handler for dynamic URL configuration
- introduce ConfigHandler to provide dynamic server URLs based on request host
- add endpoint in server to serve configuration to frontend

✨ feat(frontend): implement dynamic server config loading

- use new config endpoint to dynamically set wsUrl and apiUrl in App component
- update serverConfig utility to fetch configuration from backend

📦 build(docker): update backend and frontend images

- bump backend image to v1.0.3
- bump frontend image to v1.0.4
- set PUBLIC_HOST environment variable in backend service

--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -19,18 +19,20 @@ services:
     restart: unless-stopped
 
   backend:
-    image: ghcr.io/analiceleite/zypher_backend:v1.0.0
+    image: ghcr.io/analiceleite/zypher_backend:v1.0.3
     container_name: zypher_backend
     depends_on:
       - postgres
     env_file:
       - .env
+    environment:
+      PUBLIC_HOST: localhost:8000
     ports:
       - "8000:8000"
     restart: unless-stopped
 
   frontend:
-    image: ghcr.io/analiceleite/zypher_frontend:v1.0.0
+    image: ghcr.io/analiceleite/zypher_frontend:v1.0.4
     container_name: zypher_frontend
     ports:
       - "3000:80"
